# aoc-cpp

./: .gitignore  CMakeLists.txt
2023/: CMakeLists.txt
2023/problem1/: CMakeLists.txt  problem1  problem1.cpp  problem1.h
2024/: CMakeLists.txt
2024/problem1/: problem1.cpp
2024/problem2/: extra.cpp  problem2.cpp
2024/problem3/: problem3.cpp
include/: input.h
lib/: input.cpp
